# ltheory-old

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bash  configure.py
cmake/: FindGLEW.cmake
extbin/linux32/: libenet.so.2.4.2  libsfml-audio.so.2  libsfml-graphics.so.2  libsfml-network.so.2  libsfml-window.so.2.0
extbin/linux64/: libenet.so.2.4.2  libfreetype.so.6.11.2  libsfml-audio.so.2.0  libsfml-graphics.so.2.0  libsfml-network.so.2  libsfml-system.so.2.0  libsfml-window.so.2.0
extbin/linux64/old/: libsfml-graphics.so.2.0  libsfml-network.so.2.0  libsfml-system.so.2.0  libsfml-window.so.2.0
extbin/osx/: libGLEW.dylib  libenet.2.dylib  libfmodevent.dylib  libfmodeventnet.dylib  libfmodex.dylib  libfmodexL.dylib  libfreetype.6.dylib  libsfml-audio.2.0.dylib  libsfml-graphics.2.dylib  libsfml-network.2.0.dylib  libsfml-system.2.0.dylib  libsfml-window.2.dylib
extlib/win32/FMOD/: fmod_event.lib  fmodex_vc.lib
extlib/win32/Glew/: glew32s.lib
extlib/win32/SFML/: sfml-audio.lib  sfml-graphics.lib  sfml-main.lib  sfml-network.lib  sfml-system.lib  sfml-window.lib
extlib/win32/freetype/: freetype28s.lib
extsrc/SFML/: CMakeLists.txt  cmake_install.cmake
extsrc/SFML/Audio/: ALCheck.cpp  ALCheck.hpp  AudioDevice.cpp  AudioDevice.hpp  CMakeLists.txt  Listener.cpp  Music.cpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundFile.cpp  SoundFile.hpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp  cmake_install.cmake
extsrc/SFML/Graphics/: CMakeLists.txt  Color.cpp  Font.cpp  GLCheck.cpp  GLCheck.hpp  Image.cpp  ImageLoader.cpp  ImageLoader.hpp  RenderTarget.cpp  RenderTexture.cpp  RenderTextureImpl.cpp  RenderTextureImpl.hpp  RenderTextureImplFBO.cpp  RenderTextureImplFBO.hpp  RenderWindow.cpp  Shader.cpp  Shape.cpp  Sprite.cpp  Text.cpp  View.cpp  cmake_install.cmake
extsrc/SFML/Main/: CMakeLists.txt
extsrc/SFML/Network/: CMakeLists.txt  Ftp.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  TcpSocket.cpp  UdpSocket.cpp  cmake_install.cmake
extsrc/SFML/System/: CMakeLists.txt  Clock.cpp  Err.cpp  Lock.cpp  Mutex.cpp  Sleep.cpp  Thread.cpp  ThreadLocal.cpp  cmake_install.cmake
extsrc/SFML/Window/: CMakeLists.txt  Context.cpp  GlContext.cpp  GlContext.hpp  GlResource.cpp  VideoMode.cpp  VideoModeImpl.hpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp  cmake_install.cmake
include/FMOD/: fmod.h  fmod_event.h  fmod_event.hpp  fmod_event_net.h
include/OVR/: OVR.h  OVRVersion.h
include/SFML/: Config.hpp
include/SFML/Graphics/: Image.hpp  Shader.hpp
include/SFML/Window/: Window.hpp
resource/font/Abel/: OFL.txt
resource/font/Anaheim/: OFL.txt
resource/font/Aubrey/: OFL.txt
resource/font/Baumans/: OFL.txt
resource/font/Coda/: OFL.txt
resource/font/Economica/: OFL.txt
resource/font/Exo/: OFL.txt
resource/font/Gafata/: OFL.txt
resource/font/Homenaje/: OFL.txt
resource/font/Iceland/: OFL.txt
resource/font/KellySlab/: OFL.txt
resource/font/Mako/: OFL.txt
resource/font/Marmelad/: OFL.txt
resource/font/NewsCycle/: OFL.txt
resource/font/Nova/: OFL.txt
resource/font/Offside/: OFL.txt
resource/font/PontanoSans/: OFL.txt
resource/font/ShareTechMono/: OFL.txt
resource/font/Strait/: OFL.txt
resource/font/unicaone/: OFL.txt
resource/gamedata/grammar/: default.txt
resource/gamedata/item/: thruster.txt
resource/gamedata/technology/: root.txt  structural_engineering.txt  subsystem_engineering.txt
resource/music/: LT_Music.fev  LtheoryTest01.fev  LtheoryTest01_bank00.fsb  System01.fsb
resource/script/: Colors.lts  Fonts.lts  Icons.lts  Widgets.lts
resource/script/App/: brain.lts  colony.lts  dogfight.lts  draw.lts  font.lts  handling.lts  hnn.lts  hud.lts  image.lts  launcher.lts  life.lts  loading.lts  ltheory.lts  map.lts  market.lts  model.lts  objectinfo.lts  observatory.lts  platemesh.lts  prime.lts  rails.lts  sandbox.lts  strukt.lts  threads.lts  ui.lts  universe.lts  war.lts  widget.lts
resource/script/Common/: Grammar.lts
resource/script/Icon/: Cursors.lts
resource/script/Item/: ThrusterType.lts  TurretType.lts  WeaponType.lts
resource/script/Object/: Colony.lts  Firework.lts  Ship.lts  System.lts  Thruster.lts  WarpNode.lts  WarpRail.lts
resource/script/Task/: Test.lts
resource/script/Texture/: Filters.lts  RandomScreenshot.lts
resource/script/Widget/: Browser.lts  Button.lts  Components.lts  DevPanel.lts  FocusWindow.lts  FontPreview.lts  GameMenu.lts  Grid.lts  GridList.lts  HUD.lts  Handling.lts  Icon.lts  IconButton.lts  ImageEditor.lts  ItemInfo.lts  Map.lts  Messages.lts  ModelEditor.lts  ObjectInfo.lts  Observatory.lts  RadialButton.lts  RadialList.lts  Scanner.lts  ScrollFrame.lts  Settings.lts  Slider.lts  Spacer.lts  SplashScreen.lts  Tab.lts  Text.lts  TextEditor.lts  TextField.lts  ToggleButton.lts  Window.lts
resource/shader/common/: atlas.jsl  bezier.jsl  blend.jsl  color.jsl  cube.jsl  deferred.jsl  fdm.jsl  field.jsl  frag.jsl  global.jsl  lighting.jsl  math.jsl  noise.jsl  quat.jsl  raytracing.jsl  scattering.jsl  smaa.jsl  softparticle.jsl  texturing.jsl  ui.jsl  vert.jsl
resource/shader/fragment/: atmosphere.jsl  beam.jsl  cube_permute.jsl  default.jsl  depthprepass.jsl  dustclouds.jsl  dustfleck.jsl  explosion.jsl  filter_ao.jsl  filter_dirt.jsl  filter_rust.jsl  gate.jsl  hologram.jsl  imposter1.jsl  imposter2.jsl  lensflare.jsl  particle_radial.jsl  particle_radialtextured.jsl  planet.jsl  planetring.jsl  pulse_head.jsl  pulse_tail.jsl  rail.jsl  shield.jsl  shield_explosion.jsl  skybox.jsl  smaa_1.jsl  smaa_2.jsl  smaa_3.jsl  solidcolor.jsl  starbg.jsl  terrain.jsl  thruster_trail.jsl  trail.jsl  transferbeam.jsl  tree.jsl  vertexcolor.jsl  warprail.jsl  wormhole.jsl
resource/shader/vertex/: billboard.jsl  billboard_axis.jsl  billboard_axis_wrapped.jsl  billboard_soft.jsl  default.jsl  identity.jsl  imposter.jsl  npm.jsl  (+14 more)
script/: assetlist.py  install_dependencies.sh  tloc  tloc.py
script/meta/: DeclareFunction.py  common.py
src/: resource.h  resources.rc
src/launch/: launch.cpp
src/liblt/: BuildMode.h  Common.cpp  Common.h
(+882 files in other folders)
